use camunda api for boundary checker